--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "hoist-non-react-statics": "^3.3.0",
+    "moment": "^2.24.0",
     "react": "16.8.6",
-    "react-native": "0.60.4"
+    "react-native": "0.60.4",
+    "react-native-calendars": "^1.204.0",
+    "react-native-navigation": "^2.26.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
